# rust-weechat

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/weechat/: Cargo.toml  build.rs
crates/weechat-macro/: Cargo.toml
crates/weechat-macro/src/: lib.rs
crates/weechat-sys/: Cargo.toml  README.md  build.rs
crates/weechat-sys/src/: weechat-plugin.h
crates/weechat-test/: Cargo.toml
crates/weechat-test/src/: lib.rs
crates/weechat/examples/go/: Cargo.toml
crates/weechat/src/: config_macros.rs  executor.rs  hdata.rs  infolist.rs  lib.rs  weechat.rs
crates/weechat/src/buffer/: lines.rs  mod.rs  nick.rs  nickgroup.rs  window.rs
crates/weechat/src/config/: boolean.rs  color.rs  config.rs  config_options.rs  enum.rs  integer.rs  mod.rs  section.rs  string.rs
crates/weechat/src/hooks/: bar.rs  commands.rs  completion.rs  fd.rs  mod.rs  modifier.rs  signal.rs  timer.rs
tests/: Cargo.toml
tests/src/: lib.rs
weechat-macro/: Cargo.toml
weechat-macro/src/: lib.rs
weechat/examples/go/src/: lib.rs
weechat/examples/grep/src/: lib.rs
weechat/examples/infolist/src/: lib.rs
weechat/examples/sample/src/: lib.rs
