[package]
name = "weechat-macro"
version = "0.4.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "Procedural macros for the weechat crate"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/poljar/rust-weechat"

[lib]
proc-macro = true

[dependencies]
libc = "0.2.132"
syn = "1.0.99"
proc-macro2 = "1.0.43"
quote = "1.0.21"
proc-macro-crate = "1.2.1"
