[package]
name = "weechat"
version = "0.4.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]

repository = "https://github.com/poljar/rust-weechat/"
homepage = "https://github.com/poljar/rust-weechat/"
edition = "2018"

readme = "README.md"
description = "Weechat API bindings for Rust"
license = "MIT"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
# Support to run futures on the Weechat main thread.
async = ["async-task", "pipe-channel", "futures", "async-trait"]

# Declarative configuration macro.
config_macro = ["paste", "strum"]

# Still unsound or experimental features will be hidden behind this flag.
unsound = []

docs = ["async", "unsound", "config_macro"]

[dependencies]
libc = "0.2.132"

backtrace = "0.3.66"
async-task = { version = "4.3.0", optional = true }
async-trait = { version = "0.1.57", optional = true }
pipe-channel = { version = "1.3.1", optional = true, rev = "815078dce3c1a1c4ff3d1cdf6d386448108508c3", git = "https://github.com/panekj/pipe-channel.git" }
futures = { version = "0.3.24", optional = true }
paste = { version = "1.0.9", optional = true }
strum = { version = "0.27.2", optional = true }

weechat-macro = { version = "0.4.0", path = "../weechat-macro" }
weechat-sys = { version = "0.4.0", path = "../weechat-sys" }

[dev-dependencies]
async-std = "1.12.0"
pipe-channel = { version = "1.3.1", rev = "815078dce3c1a1c4ff3d1cdf6d386448108508c3", git = "https://github.com/panekj/pipe-channel.git" }
strum = "0.27.2"
strum_macros = "0.27.2"
futures = "0.3.24"

[build-dependencies]
weechat-sys = { version = "0.4.0", path = "../weechat-sys" }
